playground/notas_tests/invalid/blk-01.hulk
1 + { print(1); 2 };
